--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "description": "playing with node.js",
   "name": "ndjsmock",
   "license": "MIT",
-  "repository": null,
+  "repository": "https://github.com/baor/ndjsmk",
   "version": "4.11.2"
 }
