--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "name": "ndjsmock",
   "license": "MIT",
   "repository": "https://github.com/baor/ndjsmk",
-  "version": "4.11.2"
+  "version": "4.11.2",
+  "jshintConfig": {
+    "node": true,
+    "strict": false
+  }
 }
